<resources>
    <!-- Facebook 推广相关 -->
    <string name="facebook_app_id">508336674804558</string>
    <string name="facebook_client_token">e2c109e9970eef58bf437c74fea9d500</string>
    <string name="fb_login_protocol_scheme">fb508336674804558</string>

    <string name="app_name">GhostVpn</string>
    <string name="launcher_tip">GhostProxy</string>
    <string name="launcher_start">Start</string>
    <string name="launcher_desc">Professional, fast and Free</string>
    <string name="launcher_privacy">Privacy Policy</string>
    <string name="launcher_privacy_desc">You should agree with \"Privacy Policy\"</string>
    <string name="launch_privacy_agreement">Please read the Privacy Policy first and tick it!</string>
    <string name="lottie_content">Connected and Fetch server list ...</string>
    <string name="launcher_notification_title">Allow \"Ghostproxy\" to send  notifications?</string>
    <string name="launcher_notification_desc">You can modify notification permissions  in \"Settings - Notification and Status Bar\"</string>
    <string name="launcher_notification_confirm">Allow</string>
    <string name="launcher_notification_refuse">Reject</string>
    <string name="my_title">GhostProxy</string>
    <string name="my_desc">Copyright © 2022 Apple Inc. All rights reserved.</string>
    <string name="my_privacy">Privacy Policy</string>
    <string name="main_free">Free Services</string>
    <string name="main_disconnect">Disconnect</string>
    <string name="main_connect">Connect</string>
    <string name="common_auto_connect">Auto Select</string>
    <string name="common_please_wait">Please Wait</string>
    <string name="dialog_disconnect_now">Disconnect Now</string>
    <string name="dialog_connecting_now">Connecting Now</string>
    <string name="connect_result_vpn_name_tage">Vpn Server</string>
    <string name="connect_result_vpn_ping">Speed</string>
    <string name="connect_result_connected">Connected</string>
    <string name="connect_result_disconnect">Disconnect</string>
    <string name="vpn_list_title">Change Server</string>
</resources>