<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="288dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/launcher_notification_background"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="90dp"
            android:layout_height="102dp"
            android:layout_marginTop="39dp"
            android:src="@drawable/launcher_notification_lock" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="36dp"
            android:gravity="center"
            android:text="@string/launcher_notification_title"
            android:textColor="@color/FF1754FD"
            android:textSize="17sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="19dp"
            android:gravity="center"
            android:text="@string/launcher_notification_desc"
            android:textColor="@color/FF808080"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvConfirm"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="14dp"
            android:background="@drawable/shape_launcher_notification_confirm"
            android:gravity="center"
            android:text="@string/launcher_notification_confirm"
            android:textColor="@color/white"
            android:textSize="15sp" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvRefuse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="19dp"
            android:gravity="center"
            android:text="@string/launcher_notification_refuse"
            android:textColor="@color/FFB3B3B3"
            android:textSize="15sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>