<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/launcher_background"
    android:visibility="gone"
    tools:visibility="visible">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivTopBackground"
        android:layout_width="139dp"
        android:layout_height="139dp"
        android:layout_marginTop="216dp"
        android:scaleType="centerCrop"
        android:src="@drawable/launcher_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLaunchTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="19dp"
        android:layout_marginBottom="14dp"
        android:includeFontPadding="false"
        android:text="@string/launcher_tip"
        android:textColor="@color/FF333333"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivTopBackground" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLaunchTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/launcher_desc"
        android:textColor="@color/FF333333_50"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLaunchTip" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="19dp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/tvStart">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivSelect"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:padding="6dp"
            android:scaleType="centerCrop"
            android:src="@drawable/selector_launcher_privacy" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvPrivacy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:text="@string/launcher_privacy_desc"
            android:textColor="@color/FFB3B3B3"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLaunchTitle" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvStart"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="134dp"
        android:background="@drawable/shape_launcher_start"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/launcher_start"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>