<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_background"
    android:orientation="vertical"
    tools:context=".activity.MyActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        android:layout_width="42dp"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical"
        android:paddingStart="5dp"
        android:paddingTop="11dp"
        android:paddingEnd="5dp"
        android:paddingBottom="11dp"
        android:src="@drawable/my_back" />

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="144dp"
        android:layout_height="144dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="19dp"
        android:src="@drawable/my_image" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/my_title"
        android:textColor="@color/FF333333"
        android:textSize="24sp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginStart="81dp"
        android:layout_marginEnd="81dp"
        android:gravity="center"
        android:text="@string/my_desc"
        android:textColor="@color/FF333333_50"
        android:textSize="13sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/llPrivacy"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="26dp"
        android:background="@drawable/shape_my_privacy"
        android:gravity="center_vertical">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="5dp"
            android:src="@drawable/my_privacy" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/my_privacy"
            android:textColor="@color/FF1754FD"
            android:textSize="15sp" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="7dp"
            android:layout_height="14dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/my_enter" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>